--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app"
+    "start": "node ./bin/www",
+    "dev": "nodemon app"
   },
   "repository": {
     "type": "git",
@@ -19,8 +20,6 @@
   },
   "homepage": "https://github.com/zarmintaa/challenge_ch_4#readme",
   "devDependencies": {
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.15",
     "prettier": "^2.6.2"
   },
   "dependencies": {
@@ -31,6 +30,8 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "sequelize": "^6.18.0",
-    "swagger-ui-express": "^4.3.0"
+    "swagger-ui-express": "^4.3.0",
+    "nodemon": "^2.0.15",
+    "morgan": "^1.10.0"
   }
 }
